update geoip dependency